<resources>
    <string name="app_name">Movies</string>
    <string name="menu_movie">Movie</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_share">Share</string>

    <string name="trailers">Trailers</string>
    <string name="summary">Summary</string>
    <string name="submit">Submit</string>

    <string name="filter_popularity">Popularity</string>
    <string name="filter_new">New</string>
    <string name="filter_vote_average">Vote average</string>

    <string name="text_appearance">Appearance</string>
    <string name="theme_use_device">Use device theme</string>
    <string name="theme_light">Light theme</string>
    <string name="theme_dark">Dark theme</string>

    <string name="text_cancel">Cancel</string>
</resources>